# brian

./: .gitignore  BRIAN_QUICK_REFERENCE.md  BUG_FIX.md  COMPLETE_SUMMARY.md  FINAL_FIX_SUMMARY.md  FTS_SEARCH_FIX.md  GOOGLE_DOCS_SOLUTION.md  GOOGLE_DRIVE_INTEGRATION.md  GOOSE_INTEGRATION.md  GRAPH_VISUALIZATION_EXPLAINED.md  HOME_REDESIGN.md  HOW_TO_PROCEED.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INTEGRATION_COMPLETE.md  LINK_PREVIEW_SETUP.md  README.md  SETUP_COMPLETE.md  SIMILARITY_BUG_FIX.md  SKILLS_DEPLOYMENT.md  SKILLS_INTEGRATION_SUMMARY.md  START_HERE.md  TESTING_SKILLS.md  TEST_HOME_VIEW.md  THEME_FILTERING.md  VECTOR_SEARCH_UPDATE.md  WHATS_NEW.md  add_more_links.sh  batch_import_drive.js  brian-backend-entry.py  brian-backend.spec  complete_import.sh  import_batch_3.sh  import_docs_with_dates.sh  import_final_batch.sh  import_from_drive.js  import_remaining_all.sh  import_remaining_docs.sh  pyproject.toml  reimport_with_dates.sh  (+9 more)
.github/: FUNDING.yml
.github/workflows/: release.yml
brian/: config.py  main.py
brian/api/: routes.py
brian/database/: connection.py  migrations.py  repository.py  schema.py
brian/models/: __init__.py  knowledge_item.py
brian/services/: __init__.py  clustering.py  link_preview.py  similarity.py
brian/skills/: __init__.py  cli.py  importer.py
brian_mcp/: README.md  __init__.py  server.py
brian_mcp/templates/: item_view.html
frontend/: README.md  SETUP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: BackendStatus.tsx  BackendStatusExample.tsx  BrainLogo.jsx  CodeSnippetCard.jsx  ContentPreview.jsx  DeleteConfirmDialog.jsx  EditItemDialog.jsx  FilterBar.jsx  (+16 more)
scripts/: build-backend.sh  version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+12 files in other folders)
