[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brian-knowledge"
version = "0.1.0"
description = "Personal knowledge management system with MCP support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "mcp>=0.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
brian-mcp = "brian_mcp.server:main"

[tool.setuptools.packages.find]
include = ["brian*", "brian_mcp*"]
